--- a/app/src/index.html
+++ b/app/src/index.html
@@ -11,12 +11,12 @@
   <!--bootstrap4 CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="index.css">
   <title>My App</title>
   
 </head>
 <body>
-    Some text
+    Some text from index.html
   <div id="app"></div>
 </body>
 </html>
