--- a/app/src/index.html
+++ b/app/src/index.html
@@ -5,18 +5,20 @@
   <meta charset="UTF-8">
   <!--font awesome kit link-->
   <!-- <script src="https://use.fontawesome.com/releases/v5.10.2/js/all.js" ></script>    -->
+  <link rel="stylesheet" type="text/css" src="style.css" >
   <link href="https://kit.fontawesome.com/42ee5f1b82.js">
   <!-- googlefonts-->
   <link href="https://fonts.googleapis.com/css?family=Courgette|Open+Sans&display=swap" rel="stylesheet"> 
   <!--bootstrap4 CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   
-  <link rel="stylesheet" href="index.css">
+
+
   <title>My App</title>
   
 </head>
 <body>
-    Some text from index.html
+   
   <div id="app"></div>
 </body>
 </html>
