--- a/app/src/index.html
+++ b/app/src/index.html
@@ -4,6 +4,8 @@
 
   <meta charset="UTF-8">
   <!--font awesome kit link-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css">
+  <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/v4-shims.css"> -->
   <!-- <script src="https://use.fontawesome.com/releases/v5.10.2/js/all.js" ></script>    -->
   <link rel="stylesheet" type="text/css" src="style.css" >
   <link href="https://kit.fontawesome.com/42ee5f1b82.js">
@@ -18,7 +20,7 @@
   
 </head>
 <body>
-   
+  <i class="fa fa-close"></i>
   <div id="app"></div>
 </body>
 </html>
